old/expenses-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expenses-dashboard-web
  namespace: expenses-dashboard
spec:
  type: ClusterIP
  selector:
    app: expenses-dashboard
  ports:
    - name: http
      port: 4321
      targetPort: 4321
